[gd_scene load_steps=2 format=3 uid="uid://dd15i6wg6ruvn"]

[ext_resource type="Script" uid="uid://cuagyuuo04i3m" path="res://scenes/ai_chat.gd" id="1_rwcgm"]

[node name="AiChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwcgm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
follow_focus = true

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
bbcode_enabled = true

[node name="InputRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="VBoxContainer/InputRow"]
layout_mode = 2
text = "> "

[node name="UserInput" type="LineEdit" parent="VBoxContainer/InputRow"]
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/InputRow/UserInput" to="." method="_on_user_input_text_submitted"]
